# cplusplus-course-exercises

eksamen-oving/: CMakeLists.txt
eksamen-oving/eksamen-h22/: CMakeLists.txt  oppg4_test.cpp  oppgave1.cpp  oppgave2.cpp  oppgave3.cpp  oppgave4.cpp
eksamen-oving/eksamen-v22/: CMakeLists.txt  oppgave1.cpp  oppgave2.cpp  oppgave3.cpp  oppgave4.cpp
eksamen-oving/eksamen-v23/: CMakeLists.txt  oppgave1.cpp  oppgave2.cpp  oppgave3.cpp  oppgave4.cpp
new/oving3/: CMakeLists.txt  oppgave1.cpp
oving1/: CMakeLists.txt  oving1a.cpp  oving1b.cpp  temperatures.txt
oving2/: CMakeLists.txt  main.cpp  oppgave2a.cpp  oppgave2b.cpp  oppgave4.cpp  oppgave5.cpp  oppgave6.cpp
oving3/: CMakeLists.txt  commodity.hpp  oppgave1.cpp  oppgave2.cpp  oppgave3.cpp  oppgave4.cpp  oving3.tar
oving4/: CMakeLists.txt  oppgave1.cpp  oppgave2.cpp
oving5/: CMakeLists.txt  oving5.cpp
oving6/: CMakeLists.txt  oppgave1.cpp  oppgave2.cpp
oving7/: CMakeLists.txt  Set.cpp  Set.h  fraction.cpp  fraction.hpp  oppgave1.cpp  oppgave2.cpp
oving8/: .gitignore  CMakeLists.txt  oppgave1.cpp  oppgave2.cpp  oving8.tar
