cmake_minimum_required(VERSION 3.24)
project(oving2)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++1y -Wall -Wextra")

add_executable(oppgave2a oppgave2a.cpp)
add_executable(oppgave2b oppgave2b.cpp)
add_executable(oppgave4 oppgave4.cpp)
add_executable(oppgave5 oppgave5.cpp)
add_executable(oppgave6 oppgave6.cpp)